--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -49,7 +49,7 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Buku Saya</a>
+                <a class="nav-link" href="/my-book.html">Buku Saya</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#" onclick="logout()">Logout</a>
@@ -239,6 +239,7 @@
               "</div>";
             alert.append(message);
             $("#btn-modal-close").click();
+            setTimeout((window.location.href = "/"), 2000);
           },
           error: function (xhr, status, error) {
             console.error("Error: ", error);
