Implement api return borrow book

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -75,7 +75,7 @@
         $.ajax({
           url: url,
           type: "POST",
-          contentType: "application/json", // Tentukan tipe konten sebagai JSON
+          contentType: "application/json",
           data: jsonData,
           success: function (data) {
             $("#alert").empty();
