--- a/src/main/resources/static/borrow-book.html
+++ b/src/main/resources/static/borrow-book.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Book</title>
+    <title>Home</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -49,7 +49,7 @@
                 <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/my-book.html">Buku Saya</a>
+                <a class="nav-link" href="/my-book.html">Buku Saya</a>
               </li>
               <li class="nav-item" id="nav-item-book"></li>
               <li class="nav-item" id="nav-item-borrow-book"></li>
@@ -60,32 +60,23 @@
           </div>
         </div>
       </nav>
-      <h2 class="my-4">Buku Yang Dipinjam</h2>
+      <h2 class="my-4">Data Peminjaman Buku</h2>
       <div class="mt-4" id="alert"></div>
-      <div id="div-card">
-        <div class="card p-4 col-md-6">
-          <input type="hidden" id="borrowId" disabled />
-          <div class="mb-3">
-            <label for="title" class="form-label">Judul</label>
-            <input type="text" class="form-control" id="title" readonly />
-          </div>
-          <div class="mb-3">
-            <label for="description" class="form-label">Deskripsi</label>
-            <input type="text" class="form-control" id="description" readonly />
-          </div>
-          <div class="mb-3">
-            <label for="borrowDate" class="form-label">Tanggal Pinjam</label>
-            <input type="text" class="form-control" id="borrowDate" readonly />
-          </div>
-          <div class="mb-3">
-            <label for="returnDate" class="form-label">Tanggal Kembali</label>
-            <input type="text" class="form-control" id="returnDate" readonly />
-          </div>
-          <button class="btn btn-primary col-md-6" onclick="returnBook()">
-            Kembalikan Buku
-          </button>
-        </div>
-      </div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">No</th>
+            <th scope="col">Judul</th>
+            <th scope="col">Deskripsi</th>
+            <th scope="col">Dipinjam Oleh</th>
+            <th scope="col">Tgl Pinjam</th>
+            <th scope="col">Tgl Kembali</th>
+            <th scope="col">Tgl Dikembalikan</th>
+            <th scope="col">Dikembalikan</th>
+          </tr>
+        </thead>
+        <tbody id="table-body"></tbody>
+      </table>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -110,29 +101,42 @@
             "<a class='nav-link' href='/book.html'>Data Buku</a>"
           );
           $("#nav-item-borrow-book").append(
-            "<a class='nav-link' href='/borrow-book.html'>Peminjaman Buku</a>"
+            "<a class='nav-link active' href='/borrow-book.html'>Peminjaman Buku</a>"
           );
         }
 
-        const urlGetBooks = "http://localhost:8080/api/books/borrow";
-        const userId = atob(getCookieValue("userId"));
+        const urlBorrowBook = "http://localhost:8080/api/books/borrow";
         $.ajax({
-          url: urlGetBooks,
+          url: urlBorrowBook,
           type: "GET",
-          data: {
-            userId: userId,
-            isReturn: false,
-          },
           success: function (data) {
-            if (data.data.length == 0) {
-              $("#div-card").empty();
-            } else {
-              $("#borrowId").val(data.data[0].id);
-              $("#title").val(data.data[0].book.title);
-              $("#description").val(data.data[0].book.description);
-              $("#borrowDate").val(data.data[0].borrowDate);
-              $("#returnDate").val(data.data[0].returnDate);
-            }
+            console.log(data);
+            const tableBody = $("#table-body");
+            tableBody.empty();
+            let no = 1;
+            data.data.map(function (borrow) {
+              const isReturn = borrow.return ? "Sudah" : "Belum";
+              const tr =
+                "<tr><th scope='row'>" +
+                no +
+                "</th><td>" +
+                borrow.book.title +
+                "</td><td>" +
+                borrow.book.description +
+                "</td><td>" +
+                borrow.user.email +
+                "</td><td>" +
+                borrow.borrowDate +
+                "</td><td>" +
+                borrow.returnDate +
+                "</td><td>" +
+                borrow.actualReturnDate +
+                "</td><td>" +
+                isReturn +
+                "</td></tr>";
+              tableBody.append(tr);
+              no++;
+            });
           },
           error: function (xhr, status, error) {
             console.error("Error: ", error);
@@ -147,15 +151,18 @@
         });
       });
 
-      function returnBook() {
-        const urlReturnBook = "http://localhost:8080/api/books/return";
-        const borrowId = $("#borrowId").val();
+      function addBookAction(event) {
+        event.preventDefault();
+        const title = $("#title").val();
+        const description = $("#description").val();
         const jsonData = JSON.stringify({
-          borrowId: borrowId,
+          title: title,
+          description: description,
         });
+        const urlAddBook = "http://localhost:8080/api/books";
         const alert = $("#alert");
         $.ajax({
-          url: urlReturnBook,
+          url: urlAddBook,
           type: "POST",
           contentType: "application/json",
           data: jsonData,
@@ -166,7 +173,6 @@
               "</div>";
             alert.empty();
             alert.append(message);
-            $("#div-card").empty();
           },
           error: function (xhr, status, error) {
             console.error("Error: ", error);
